--- a/página1.html
+++ b/página1.html
@@ -290,8 +290,8 @@
             <div class="Botoes">
                 <div class="opcoes">
                     <ul>
-                        <li><a href="http://concordia.ifc.edu.br/cursos/" class="btn"><i
-                                    class="fa fa-graduation-cap fa-lg"></i><br>CURSOS</a></li>
+                        <li><a href="página3.html" class="btn"><i
+                            class="fa fa-graduation-cap fa-lg"></i><br>CURSOS</a></li>
                         <li><a href="http://secretaria.concordia.ifc.edu.br/" class="btn"><i
                                     class="fa fa-archive fa-lg"></i><br>SECRETARIA</a></li>
                         <li><a href="http://biblioteca.concordia.ifc.edu.br/" class="btn"><i
