--- a/página3.html
+++ b/página3.html
@@ -88,7 +88,7 @@
         <div class="Botoes">
             <div class="opcoes">
                 <ul>
-                    <li><a href="http://concordia.ifc.edu.br/cursos/" class="btn"><i
+                    <li><a href="página3.html" class="btn"><i
                                 class="fa fa-graduation-cap fa-lg"></i><br>CURSOS</a></li>
                     <li><a href="http://secretaria.concordia.ifc.edu.br/" class="btn"><i
                                 class="fa fa-archive fa-lg"></i><br>SECRETARIA</a></li>
